<resources>
    <string name="app_name">Todo</string>
    <string name="text_undo">Undo</string>
    <string name="abuot">项目关于：\n这是为一个\n总是忘记要做什么的笨蛋写的\n也是我开发的第一个软件,想到有人平时总是忘记什么时候开会啊,或者有什么安排之类的,正好我在学Android开发,我就想要不写一个TODO的应用,顺便练下手。</string>
    <string name="author">作者:\nchezhi (sdjkdf1@gmail.com)</string>
    <string name="title">关于</string>
    <string name="version">Todo V0.1.1</string>
    <string name="setting_regular">常规</string>
    <string name="order">待完成以提醒时间排序</string>
    <string name="statusNotify">在状态显示未完成通知</string>
    <string name="todoList">添加清单</string>
    <string name="notDone">待完成</string>
    <string name="done">已完成</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="add_list">添加清单</string>
    <string name="list_name">清单名字</string>
    <string name="item_name">新建项目</string>
    <string name="setting">设置</string>
    <string name="about_this">关于</string>
    <string name="delete">删除清单</string>

    <string name="todo_title">TODO标题</string>
    <string name="todo_detail">描述</string>
    <string name="se_date">选定日期</string>
    <string name="se_time">选定时间</string>
    
    <string name="save_title">确定保存？</string>
    <string name="delete_message">确认删除吗？回收站功能没完成前，数据将丢失。</string>

    <string name="thanks">感谢酷友@枫羽柠痕Ice 制作的图标</string>
    <string name="thanks2">等人制作图标中......</string>
</resources>
