<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EAF6"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        app:contentInsetRight="5dp"
        app:title="@string/title"
        app:titleTextColor="#ffffff"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/ToolbarTheme">
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
       android:layout_marginStart="7dp"
       android:layout_marginEnd="7dp"
       app:cardCornerRadius="@dimen/card_cornerRadius"
       app:cardElevation="@dimen/card_elevation"
       app:contentPadding="5dp"
       app:cardUseCompatPadding="true">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:textSize="15sp"
           android:text="@string/author"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardCornerRadius="@dimen/card_cornerRadius"
        app:cardElevation="@dimen/card_elevation"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:text="@string/abuot" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:cardCornerRadius="@dimen/card_cornerRadius"
        app:cardElevation="@dimen/card_elevation"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/version" />
    </android.support.v7.widget.CardView>

</LinearLayout>
